ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: jenkins
  namespace: jenkins-ns
spec:
  tls:
  - host: example.com.br #DNS que esteja atrelado ao seu cluster kubernetes para que o ingress utilize e hospede o jenkins
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkinshttp 
            port: 
              number: 8080
#Aqui temos um simples ingress que consome o service do jenkins e hospeda a aplicação em um host
